# robot-arm-demo

./: .gitignore  README.md
docker/: Dockerfile  run_ros2_container.sh  simple_action_state.py  startup.sh
myscarabot_ros/msb_control/: CMakeLists.txt  package.xml
myscarabot_ros/msb_control/controllers/: myscarabot_controllers.yaml
myscarabot_ros/msb_control/include/msb_control/: msbFKinDemo.hpp
myscarabot_ros/msb_control/src/: main_node.cpp  msbFKinDemo.cpp
myscarabot_ros/msb_description/: CMakeLists.txt  package.xml
myscarabot_ros/msb_description/launch/: control.launch.py  display.launch.py
myscarabot_ros/msb_description/rviz/: config.rviz
myscarabot_ros/msb_description/urdf/: scarabot.urdf
myscarabot_ros/msb_description/xacro/: scarabot.xacro
